--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,351 @@
-#root {
-  max-width: 1280px;
+/* Header Styling --Start-- */
+.header {
+  position: sticky;
+  top: 0;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  z-index: 20;
+}
+
+.header .header-container {
   margin: 0 auto;
+  max-width: 1440px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+}
+
+.header .header-container .header-container--left {
+  display: flex;
+  align-items: center;
+}
+
+.header .header-container .header-container--left img {
+  width: 3rem;
+  margin-right: 1rem;
+}
+
+/* .header .header-container .header-container--left p {
+  font-weight: 800;
+  font-size: 1.3rem;
+} */
+
+.header .header-container .header-container--right {
+  display: flex;
+  align-items: center;
+}
+
+.header .header-container .header-container--right .header-navigation {
+  margin-right: 1rem;
+}
+
+.header .header-container .header-container--right .header-navigation ul {
+  list-style: none;
+  display: flex;
+}
+
+.header .header-container .header-container--right .header-navigation ul li {
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-right: 2rem;
+  cursor: pointer;
+  position: relative;
+  font-size: 1rem;
+}
+
+.header
+  .header-container
+  .header-container--right
+  .header-navigation
+  ul
+  li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -0.2rem;
+  width: 0;
+  border-bottom: 2px solid #000;
+  transition: all 0.3s;
+}
+
+.header
+  .header-container
+  .header-container--right
+  .header-navigation
+  ul
+  li:hover::before {
+  width: 100%;
+}
+
+.header .header-container .header-container--right .header-resume--btn {
+  padding: 12px 32px;
+  border: 2px solid black;
+  cursor: pointer;
+  border-radius: 5px;
+  background: black;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2rem;
+  transition: all 0.3s ease-in-out;
+  font-weight: 500;
+  display: inline-block;
+  width: auto;
+  max-width: 200px;
+  letter-spacing: 0;
+}
+
+.header .header-container .header-container--right .header-resume--btn:hover,
+.header .header-container .header-container--right .header-resume--btn:focus {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transform: translateY(-2px);
+}
+
+.header .header-mobile-navigation {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .header .header-container .header-container--right .header-navigation {
+    display: none;
+  }
+
+  .header .header-container .header-resume-container {
+    display: none;
+  }
+
+  .header .header-mobile-navigation {
+    display: block;
+    margin-left: 1rem;
+  }
+
+  .header .header-mobile-navigation .menu-btn {
+    height: 32px;
+    width: 40px;
+    cursor: pointer;
+  }
+
+  .header .header-mobile-navigation .menu-btn span,
+  .header .header-mobile-navigation .menu-btn span::before,
+  .header .header-mobile-navigation .menu-btn span::after {
+    background: black;
+    border-radius: 3px;
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 6px;
+    margin-top: 13px;
+
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+  }
+
+  .header .header-mobile-navigation .menu-btn span::before {
+    margin-top: -12px;
+  }
+
+  .header .header-mobile-navigation .menu-btn span::after {
+    margin-top: 12px;
+  }
+
+  .header .header-mobile-navigation .menu-btn.active span {
+    background: transparent;
+  }
+
+  .header .header-mobile-navigation .menu-btn.active span::before {
+    margin-top: 0;
+
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .header .header-mobile-navigation .menu-btn.active span::after {
+    margin-top: 0;
+
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  .header .header-mb-navigation {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 65px;
+    width: 100%;
+    background-color: #ededed;
+    z-index: 15;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header .header-mb-navigation ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .header .header-mb-navigation ul li {
+    font-weight: 400;
+    text-transform: uppercase;
+    cursor: pointer;
+    position: relative;
+    font-size: 1rem;
+    margin-bottom: 1.8rem;
+  }
+}
+/* Header Styling --End-- */
+
+/* Home Page Styling --Start-- */
+.main {
+  background: #fff;
+}
+
+.main-container {
+  max-width: 1440px;
+}
+/* Home Page Styling --End-- */
+
+/* Footer Styling  */
+.footer {
+  background-color: #f7f5f5;
+}
+
+.footer .footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1440px;
   padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.footer .footer-container .footer-socialmedia--icons {
+  position: fixed;
+  bottom: 0;
+  right: 40px;
+  z-index: 25;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.footer .footer-container .footer-socialmedia--icons::after {
+  content: '';
+  display: block;
+  width: 1px;
+  height: 87px;
+  margin: 0px auto;
+  background-color: black;
+}
+
+.footer .footer-container .footer-socialmedia--icons ul {
+  list-style: none;
+}
+
+.footer .footer-container .footer-socialmedia--icons ul li {
+  margin-bottom: 1rem;
+}
+
+.footer .footer-container .footer-socialmedia--icons ul li svg {
+  color: #000;
+}
+
+/* Footer Styling --End-- */
+
+/* Animations */
+.fadeInDown {
+  animation-duration: 0.45s;
+  animation-fill-mode: both;
+  animation-name: fadeInDown;
+}
+
+.fadeInUp {
+  animation-duration: 0.45s;
+  animation-fill-mode: both;
+  animation-name: fadeInUp;
+}
+
+.fadeOutUp {
+  animation-duration: 0.45s;
+  animation-fill-mode: both;
+  animation-name: fadeOutUp;
+}
+
+.fadeInRight {
+  animation-duration: 0.45s;
+  animation-fill-mode: both;
+  animation-name: fadeInRight;
+}
+
+.fadeInLeft {
+  animation-duration: 0.45s;
+  animation-fill-mode: both;
+  animation-name: fadeInLeft;
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -20px, 0);
   }
-  to {
-    transform: rotate(360deg);
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 20px, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
 
-.card {
-  padding: 2em;
+@keyframes fadeOutUp {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+    transform: translate3d(0, -20px, 0);
+  }
 }
 
-.read-the-docs {
-  color: #888;
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translate3d(-20px, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translate3d(20px, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
