--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
   font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', Arial,
     sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
